fix habit view to overflow scroll properly

--- a/src/resolutions/Resolutions.css
+++ b/src/resolutions/Resolutions.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&display=swap');
+@import './Resolutions.mobile.css';
 
 :root {
   --black: #191b15;
@@ -283,6 +284,7 @@ body {
   height: 85%;
   border: 4px solid var(--black);
   border-radius: 8px;
+  overflow: scroll;
 }
 
 .date-selector {
@@ -329,6 +331,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-shrink: 0;
 
   padding-left: 3%;
   padding-right: 5%;
@@ -484,203 +487,4 @@ body {
 .calendar-day.filled {
   background-color: var(--green);
   border: 0px;
-}
-
-/* Mobile */
-@media (max-width: 768px) {
-  .resolutions-app {
-    /* top right bottom left */
-    padding: 8px 10px 0px 10px;
-  }
-
-  .logo {
-    font-size: 12px;
-  }
-
-  .logo-text {
-    font-size: 8px;
-  }
-
-  .info-options {
-    font-size: 8px;
-  }
-
-  .info-option {
-    margin-left: 6px;
-  }
-
-  .side-bar-icon {
-    /* Layout */
-    height: 14px;
-    width: 14px;
-
-    cursor: pointer;
-  }
-
-  .app-body {
-    /* Layout */
-    width: 95%;
-    margin-right: 0vw;
-    padding-left: 1vw;
-  }
-
-  .section-title {
-    /* Appearance */
-    font-size: 20px;
-  }
-
-  .section {
-    display: grid;
-    grid-template-columns: 1fr;
-  }
-
-  .habits-image-container {
-    /* Layout */
-    width: 100%;
-  }
-
-  .suggestions-title {
-    /* Typography */
-    font-size: 18px;
-  }
-
-  .suggestions-subtitle {
-    /* Typography */
-    font-size: 10px;
-    font-weight: bold;
-  }
-
-  .suggestions-list {
-    /* Typography */
-    font-size: 10px;
-  }
-
-  .habits-image-container-creation {
-    width: 100%;
-  }
-
-  .habit-box {
-    /* Layout */
-    padding-top: 3vh;
-    padding-left: 1vw;
-    padding-right: 1vw;
-  }
-
-  .quote-box {
-    /* Layout */
-    padding-bottom: 1vh;
-
-    /* Appearance */
-    font-size: 10px;
-  }
-
-  .question-box {
-    padding-top: 1vh;
-
-    font-size: 12px;
-  }
-
-  .question-section {
-    padding-bottom: 1vh;
-    font-size: 14px;
-  }
-
-  .habit-content-box {
-    font-size: 14px;
-  }
-
-  .habits-button {
-    /* border: 1px solid var(--black); */
-    padding-top: 3vh;
-    font-size: 14px;
-    padding-right: 0px;
-    padding-bottom: 0px;
-  }
-
-  /* HABITS VIEW MODULE */
-  .habits-view {
-    height: 450px;
-    width: 100%;
-  }
-
-  .habits-view-container {
-    height: 85%;
-  }
-
-  .habits-view-new-habit-button {
-    height: 60px;
-    font-size: 14px;
-  }
-
-  .habit-container {
-    height: 70px;
-    width: 95%;
-    margin-bottom: 2%;
-
-    gap: 0;
-
-    padding-left: 2%;
-    padding-right: 4%;
-    padding-top: 3%;
-    padding-bottom: 3%;
-  }
-
-  .habit-snippet-statement {
-    /* border: 1px solid var(--black); */
-    font-size: 12px;
-  }
-
-  .habit-health-percentage {
-    /* border: 1px solid var(--black); */
-    font-size: 16px;
-  }
-
-  .calendar-title-text {
-    font-size: 12px;
-  }
-
-  .calendar-grid {
-    max-width: 100vw;
-    overflow: scroll;
-
-    grid-template-columns: 3.5ch repeat(31, 1fr);
-  }
-
-  .calendar-header-year {
-    font-size: 10px;
-    position: sticky;
-    left: 0;
-    background-color: var(--cream);
-    z-index: 1;
-  }
-
-  .calendar-month-title {
-    font-size: 10px;
-    position: sticky;
-    left: 0;
-    background-color: var(--cream);
-    z-index: 1;
-  }
-
-  .calendar-header-day {
-    font-size: 10px;
-  }
-
-  .calendar-month {
-    display: contents;
-  }
-
-  .calendar-month-title {
-    grid-column: 1;
-  }
-
-  .calendar-month-days {
-  }
-
-  .calendar-day {
-    width: 90%;
-    border: 1px solid var(--black);
-    border-radius: 2px;
-    align-self: center;
-  }
 }
